amf-cli/shared/src/test/resources/graphql-federation/tck/apis/invalid/arguments-requires.report
ModelId: file://amf-cli/shared/src/test/resources/graphql-federation/tck/apis//invalid/arguments-requires.graphql
Profile: GraphQL
Conforms: false
Number of results: 1

Level: Violation

- Constraint: http://a.ml/vocabularies/amf/parser#unmatched-field-in-field-set
  Message: Property 'birthday' referenced by field set cannot have arguments
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql-federation/tck/apis/invalid/arguments-requires.graphql#/declares/shape/Person
  Property: 
  Range: 
  Location: 
